update grpc internal calling to agv layer
